# Vllm-AB

./: .env  .gitignore  README.md  VLLMD.ipynb  pyproject.toml  requirements.txt
notebooks/: vllmd.ipynb
results/: descriptions_and_entities.json  prediction_probs.npz  predictions.csv
src/vllmd/: __init__.py
src/vllmd/llm/: __init__.py  llm_based.py  local.py
src/vllmd/utils/: __init__.py  display.py  entity_extractor.py  metrics.py  plotting.py
src/vllmd/video_processing/: __init__.py  data_processing.py  model.py
tests/: __init__.py  conftest.py
utilities/: __init__.py  custom_entity_extractor.py  data_processing.py  llm-based.py  model.py
